acme-ops/src/k8s/cluster/mailhog.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailhog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog
          imagePullPolicy: IfNotPresent
          env: []
          ports:
            - name: http
              containerPort: 8025
            - name: smtp
              containerPort: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  labels:
    app.kubernetes.io/name: mailhog
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8025
    - name: smtp
      port: 1025
  selector:
    app.kubernetes.io/name: mailhog
