acme-ops/src/k8s/cluster/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mailhog-127-0-0-1.nip.io
      secretName: wildcard-nip-io-tls
  rules:
    - host: mailhog-127-0-0-1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana-127-0-0-1.nip.io
      secretName: wildcard-nip-io-tls
  rules:
    - host: grafana-127-0-0-1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
